--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -196,6 +196,7 @@
 "last_available_year": "Last year",
 "layer_invalid_no_crs": "WMS does not support current map projection",
 "layer_invalid_no_name": "The layer can't be displayed because it has no name. ",
+"layer_invalid_outside_map": "The layer can't be displayed because its extent is outside the map. ",
 "layers_displayed": "Maps displayed",
 "layers_results_header": "Add map ...",
 "legend": "Legend",
