--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -183,8 +183,7 @@
 "homescreen_content": "Wir empfehlen Ihnen diese Funktion zu benutzen, um diese Applikation direkt auf Ihrer Startseite zu platzieren.",
 "homescreen_title": "Startseite",
 "import": "Importieren",
-"import_kml": "KML Import",
-"import_wms": "WMS Import",
+"import_tooltip": "Importieren Sie Datenquellen",
 "inform_draw_rectangl_ctrl": "Mit CTRL + Rechteck (cmd für Mac) über die Karte ziehen lassen sich mehrere Objekte auf einmal räumlich abfragen.",
 "inspire": "INSPIRE",
 "inspire_service_link_href": "http://www.geo.admin.ch/internet/geoportal/de/home.html",
@@ -197,7 +196,6 @@
 "kgs_service_link_href": "http://www.bevoelkerungsschutz.admin.ch/internet/bs/de/home/themen/kgs.html",
 "kgs_service_link_label": "Kulturgüterschutz",
 "kml": "KML",
-"kmlimport_tooltip": "Importieren Sie externe KML Datenquellen",
 "lang_chooser_label": "Sprache",
 "last_available_year": "Last year",
 "layer_invalid_no_crs": "WMS unterstützt die Kartenprojektion nicht.",
@@ -388,6 +386,5 @@
 "wildruhezonen_service_link_label": "wildruhezonen.ch",
 "wms": "WMS",
 "wms_max_size_allowed": "Maximal erlaubte WMS Grösse",
-"wmsimport_tooltip": "Importieren Sie externe WMS Datenquellen",
 "yellow": "Gelb"
 }
