--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -183,8 +183,7 @@
 "homescreen_content": "Consigliamo di usare questa funzione per posizionare l'applicazione direttamente sulla schermata iniziale.",
 "homescreen_title": "Pagina iniziale",
 "import": "Importare",
-"import_kml": "Importare KML",
-"import_wms": "Importare WMS",
+"import_tooltip": "Importare dati",
 "inform_draw_rectangl_ctrl": "Disegnare un rettangolo sulla mappa tenendo premuto il tasto CTRL (cmd per Mac) per selezionare più oggetti contemporaneamente",
 "inspire": "INSPIRE",
 "inspire_service_link_href": "http://www.geo.admin.ch/internet/geoportal/it/home.html",
@@ -197,7 +196,6 @@
 "kgs_service_link_href": "http://www.bevoelkerungsschutz.admin.ch/internet/bs/it/home/themen/kgs.html",
 "kgs_service_link_label": "Protezione dei beni culturali",
 "kml": "KML",
-"kmlimport_tooltip": "Importare dati KML esterni",
 "lang_chooser_label": "Lingua",
 "last_available_year": "Last year",
 "layer_invalid_no_crs": "WMS: L'attuale proiezione della carta non è supportata",
@@ -388,6 +386,5 @@
 "wildruhezonen_service_link_label": "zone-di-tranquillita.ch",
 "wms": "WMS",
 "wms_max_size_allowed": "Dimensione massima WMS",
-"wmsimport_tooltip": "Importare dati WMS esterni",
 "yellow": "giallo"
 }
